--- a/css/styles.css
+++ b/css/styles.css
@@ -1,53 +1,51 @@
 /* Fonts */
 @font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local(''),
-            url('../fonts/inter-v12-latin-regular.woff2') format('woff2'),
-            url('../fonts/inter-v12-latin-regular.woff') format('woff');
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local(""), url("../fonts/inter-v12-latin-regular.woff2") format("woff2"),
+    url("../fonts/inter-v12-latin-regular.woff") format("woff");
 }
 @font-face {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src: local(''),
-            url('../fonts/inter-v12-latin-500.woff2') format('woff2'),
-            url('../fonts/inter-v12-latin-500.woff') format('woff');
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: local(""), url("../fonts/inter-v12-latin-500.woff2") format("woff2"),
+    url("../fonts/inter-v12-latin-500.woff") format("woff");
 }
 @font-face {
-    font-family: 'suisse_intlblack';
-    src: url('../fonts/suisseintl-black-webfont.woff2') format('woff2'),
-         url('../fonts/suisseintl-black-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "suisse_intlblack";
+  src: url("../fonts/suisseintl-black-webfont.woff2") format("woff2"),
+    url("../fonts/suisseintl-black-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'suisse_intlbold';
-    src: url('../fonts/suisseintl-bold-webfont.woff2') format('woff2'),
-         url('../fonts/suisseintl-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "suisse_intlbold";
+  src: url("../fonts/suisseintl-bold-webfont.woff2") format("woff2"),
+    url("../fonts/suisseintl-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'suisse_intlmedium';
-    src: url('../fonts/suisseintl-medium-webfont.woff2') format('woff2'),
-         url('../fonts/suisseintl-medium-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "suisse_intlmedium";
+  src: url("../fonts/suisseintl-medium-webfont.woff2") format("woff2"),
+    url("../fonts/suisseintl-medium-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 @font-face {
-    font-family: 'suisse_intlregular';
-    src: url('../fonts/suisseintl-regular-webfont.woff2') format('woff2'),
-         url('../fonts/suisseintl-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: "suisse_intlregular";
+  src: url("../fonts/suisseintl-regular-webfont.woff2") format("woff2"),
+    url("../fonts/suisseintl-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 /* Reset */
@@ -59,202 +57,357 @@
   margin: 0;
 }
 ul {
-    list-style: none;
+  list-style: none;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 img {
   max-width: 100%;
 }
 button {
-    outline: none;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 /* Common styles */
 body {
-    position: relative;
-    width: 100%;
-    overflow-x: hidden;
-    background-color: #23395E;
-    color: #647288;
-    font-size: 16px;
-    font-family: 'suisse_intlregular';
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+  background-color: #23395e;
+  color: #647288;
+  font-size: 16px;
+  font-family: "suisse_intlregular";
 }
 .wrapper {
-    width: 100%;
+  width: 100%;
 }
 .wrapper_login {
-    background: url(../images/bg-main-top.png) 0% -10% no-repeat, url(../images/bg-main-bottom.png) 100% 100% no-repeat;
-    background-size: auto auto;
+  background: url(../images/bg-main-top.png) 0% -10% no-repeat,
+    url(../images/bg-main-bottom.png) 100% 100% no-repeat;
+  background-size: auto auto;
+  overflow: hidden;
+}
+.wrapper_main {
 }
 .container {
-    max-width: 1168px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 .container_login {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+.wrapper__inner {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 2fr;
+  grid-gap: 30px;
+  height: 100%;
+  justify-items: stretch;
 }
 .text-blue {
-    color: #0EE9FF;
+  color: #0ee9ff;
 }
-input:focus::-webkit-input-placeholder {color: transparent}
-input:focus::-moz-placeholder {color: transparent}
-input:focus:-moz-placeholder {color: transparent}
-input:focus:-ms-input-placeholder {color: transparent}
+input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+input:focus::-moz-placeholder {
+  color: transparent;
+}
+input:focus:-moz-placeholder {
+  color: transparent;
+}
+input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+.hide {
+  display: none;
+}
 
 /* Login page styles */
 .login {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .login__block_left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .login__logo {
-    width: 230px;
-    margin-bottom: 35px;
+  width: 230px;
+  margin-bottom: 35px;
 }
 .login__title {
-    max-width: 570px;
-    font-family: 'suisse_intlbold';
-    font-size: 60px;
-    line-height: 70px;
-    text-align: right;
-    text-transform: uppercase;
-    color: #ffffff;
+  max-width: 570px;
+  font-family: "suisse_intlbold";
+  font-size: 60px;
+  line-height: 70px;
+  text-align: right;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 .login__arrow {
-    margin: 0 65px;    
+  margin: 0 65px;
 }
 .login-form {
-    position: relative;
-    width: 417px;
-    background: rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(11px);
-    border-radius: 15px;
-    padding: 35px 55px 50px 55px;
-    color: #ffffff;
+  position: relative;
+  width: 417px;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(11px);
+  border-radius: 15px;
+  padding: 35px 55px 50px 55px;
+  color: #ffffff;
 }
 .login-form::before {
-    content: "";
-    position: absolute;
-    inset: 0px;
-    z-index: -1;
-    border-radius: inherit;
-    padding: 2px;
-    background: linear-gradient(165deg, rgb(18, 217, 242), transparent 50%);
-    -webkit-mask: linear-gradient(rgb(255, 255, 255) 0px, rgb(255, 255, 255) 0px) content-box content-box, linear-gradient(rgb(255, 255, 255) 0px, rgb(255, 255, 255) 0px);
-    -webkit-mask-composite: xor;
+  content: "";
+  position: absolute;
+  inset: 0px;
+  z-index: -1;
+  border-radius: inherit;
+  padding: 2px;
+  background: linear-gradient(165deg, rgb(18, 217, 242), transparent 50%);
+  -webkit-mask: linear-gradient(rgb(255, 255, 255) 0px, rgb(255, 255, 255) 0px)
+      content-box content-box,
+    linear-gradient(rgb(255, 255, 255) 0px, rgb(255, 255, 255) 0px);
+  -webkit-mask-composite: xor;
 }
 .form__header {
-    margin-bottom: 20px;
-    font-size: 24px;
+  margin-bottom: 20px;
+  font-size: 24px;
 }
 .form__field {
-    width: 306px;
-    height: 48px;
-    border-radius: 200px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: none;
-    padding: 10px 15px;
-    color: #ffffff;
-    font-size: 15px;
-    outline: none;
+  width: 306px;
+  height: 48px;
+  border-radius: 200px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
+  padding: 10px 15px;
+  color: #ffffff;
+  font-size: 15px;
+  outline: none;
 }
 .password {
-	position: relative;
+  position: relative;
 }
 .password__control {
-    position: absolute;
-	top: 17px;
-	right: 15px;
-	display: inline-block;
-	width: 19px;
-	height: 12px;
-    background-image: url(../images/svg/eye.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
+  position: absolute;
+  top: 17px;
+  right: 15px;
+  display: inline-block;
+  width: 19px;
+  height: 12px;
+  background-image: url(../images/svg/eye.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .password__control.view::after {
-    content: '';
-    display: block;
-    width: 20px;
-    height: 2px;
-    background-color: #ffffff;
-    transform: rotate(-45deg);
-    top: 5px;
-    position: absolute;
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background-color: #ffffff;
+  transform: rotate(-45deg);
+  top: 5px;
+  position: absolute;
 }
 .form__field::placeholder {
-    color: #ffffff;
-    font-size: 15px;
-    font-family: 'suisse_intlregular';
+  color: #ffffff;
+  font-size: 15px;
+  font-family: "suisse_intlregular";
 }
 .form__field_first {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 .form__check {
-    display: flex;
-    margin: 25px 0;    
+  display: flex;
+  margin: 25px 0;
 }
 .form__checkbox {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
 }
-.form__checkbox+label {
-    display: inline-flex;
-    align-items: center;
-    user-select: none;
-    cursor: pointer;
-    position: relative;
-    line-height: 19px;
-    font-size: 14px;
+.form__checkbox + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  cursor: pointer;
+  position: relative;
+  line-height: 19px;
+  font-size: 14px;
 }
-.form__checkbox+label::before {
-    content: '';
-    display: inline-block;
-    width: 26px;
-    height: 26px;
-    flex-shrink: 0;
-    flex-grow: 0;
-    margin-right: 12px;
-    background-color: rgb(255, 255, 255, 0.1);
-    border-radius: 8px;
+.form__checkbox + label::before {
+  content: "";
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  flex-shrink: 0;
+  flex-grow: 0;
+  margin-right: 12px;
+  background-color: rgb(255, 255, 255, 0.1);
+  border-radius: 8px;
 }
-.form__checkbox:checked+label::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    left: 6px;
-    width: 14px;
-    height: 14px;
-    background-color: #0EE9FF;
-    border-radius: 4px;
-  }
+.form__checkbox:checked + label::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 6px;
+  width: 14px;
+  height: 14px;
+  background-color: #0ee9ff;
+  border-radius: 4px;
+}
 .form__button {
-    width: 312px;
-    height: 50px;
-    text-align: center;
-    font-size: 18px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#08b1c4), to(#7eedfa));
-    background: linear-gradient(180deg, #08b1c4, #7eedfa);
-    border-radius: 35px;
-    color: #ffffff;
-    transition: all .2s linear;
+  width: 312px;
+  height: 50px;
+  text-align: center;
+  font-size: 18px;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#08b1c4),
+    to(#7eedfa)
+  );
+  background: linear-gradient(180deg, #08b1c4, #7eedfa);
+  border-radius: 35px;
+  color: #ffffff;
+  transition: all 0.2s linear;
 }
 .form__button:hover {
-    -webkit-box-shadow: 0 0 55px rgb(29 241 255 / 44%), inset 0 -5px 18px #d0faff;
-    box-shadow: 0 0 55px rgb(29 241 255 / 44%), inset 0 -5px 18px #d0faff;
+  -webkit-box-shadow: 0 0 55px rgb(29 241 255 / 44%), inset 0 -5px 18px #d0faff;
+  box-shadow: 0 0 55px rgb(29 241 255 / 44%), inset 0 -5px 18px #d0faff;
+}
+
+/* Navigation styles */
+.tab-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  position: relative;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(11px);
+  border-radius: 20px;
+  padding: 16px 13px;
+}
+.tab-header::before {
+  content: "";
+  position: absolute;
+  inset: 0px;
+  z-index: -1;
+  border-radius: inherit;
+  padding: 2px;
+  background: linear-gradient(165deg, rgb(18, 217, 242), transparent 50%);
+  -webkit-mask: linear-gradient(rgb(255, 255, 255) 0px, rgb(255, 255, 255) 0px)
+      content-box content-box,
+    linear-gradient(rgb(255, 255, 255) 0px, rgb(255, 255, 255) 0px);
+  -webkit-mask-composite: xor;
+}
+.tab-header__item {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  line-height: 55px;
+  font-weight: 700;
+  letter-spacing: 0.01em;
+  padding-left: 19px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.tab-header__item.active {
+  color: #0EE9FF;
+  text-shadow: 0px 0px 33px #0EE9FF;
+  position: relative;
+}
+.tab-header__icon {
+  margin: 0 16px 3px 0;
+}
+.tab-header__item.active .tab-header__icon {
+  filter: drop-shadow(0 4px 2px #1f3c6d) drop-shadow(0 0 15px rgba(0,255,240,.7));
+}
+.tab-header__item.open .tab-header__icon {
+  filter: drop-shadow(0 4px 2px #1f3c6d) drop-shadow(0 0 15px rgba(0,255,240,.7));
+}
+.tab-header__item.open {
+  background: rgba(255, 255, 255, 0.01);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(16.5px);
+  border-radius: 15px 15px 0 0;
+  border-bottom: 0;
+  color: #0EE9FF;
+  text-shadow: 0px 0px 33px #0EE9FF;
+  position: relative;
+}
+.submenu {
+  max-height: 0;
+  width: 100%;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 400;
+  overflow: hidden;
+  transition: 0.3s all linear;
+}
+.submenu_main.open {
+  padding: 0 19px 9px 19px;
+  background: rgba(255, 255, 255, 0.01);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(16.5px);
+  border-radius: 0 0 15px 15px;
+  border-top: 0;
+}
+.submenu.open {
+  max-height: 1100px;
+}
+.submenu.open .submenu__item {
+  padding-bottom: 3px;
+}
+.submenu__item {
+  padding: 15px 27px;
+  cursor: pointer;
+}
+.submenu__item.active {
+  color: #0EE9FF;
+}
+.submenu__head_icon {
+  position: relative;
+  color: #0EE9FF;
+}
+.submenu__head_icon::before {
+  content: '+';
+  color: #0EE9FF;
+  font-size: 16px;
+  display: block;
+  position: absolute;
+  left: -20px;
+  top: -2px;
+}
+.submenu__head_icon.open::before {
+  content: '-';
+}
+
+/* Main content styles */
+.tab-content {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.tab-content__item {
+  display: none;
+  padding: 20px;
+  border: 1px solid #ddd;
+  margin-top: -1px;
+}
+.tab-content__item.active {
+  display: block;
 }
