--- a/css/styles.css
+++ b/css/styles.css
@@ -634,3 +634,67 @@ input::-webkit-search-results-decoration { display: none; }
   flex-direction: column;
   row-gap: 14px;
 }
+
+/* Popup styles */
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  transition: all .3s linear;
+}
+.popup__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;    
+  background-color: rgb(0 0 0 / 95%);
+}
+.popup__close {
+  color: #0FC6DA;
+  font-size: 18px;
+  font-family: "suisse_intlmedium";
+  text-decoration: underline;
+  cursor: pointer;
+  transition: all .3s linear;
+}
+.popup__close:hover {
+  color: #0a7480;
+}
+.popup__inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 500px;
+  max-width: 90%;
+  background: #FFFFFF;
+  border-radius: 30px;
+  padding: 58px 70px 44px 70px;
+  z-index: 9999;
+}
+.popup__title {
+  font-size: 22px;
+  line-height: 27px;
+  color: #23395E;
+  text-align: center;
+  font-family: "suisse_intlmedium";
+  margin-bottom: 25px;
+}
+.popup__image {
+  width: 151px;
+  height: 151px;
+  object-fit: contain;
+  margin-bottom: 44px;
+}
